# youtube

AI SQL Functions/: Agenda.ipynb  Parse Document Function.ipynb  ai_query examples.ipynb
Databricks Apps/: Read Data Agenda.ipynb  read-write data app.py.ipynb  read-write data.ipynb
RAG Series/: Chatbot App Code.ipynb  RAG Setup.ipynb  Series Outline.ipynb
crew_ai/: agenda.ipynb
crew_ai/hot_take/: README.md  pyproject.toml
crew_ai/hot_take/outputs/: counter_hot_take.md  hot_take.md  improved_hot_take.md  topic.md
crew_ai/hot_take/src/hot_take/: crew.py  main.py
crew_ai/hot_take/src/hot_take/config/: agents.yaml  tasks.yaml
openai_sdk/python-sdk_Sports_Agent_Workflow/: .env_demo  agenda.ipynb  hot_take - polished.ipynb  hot_take.ipynb
