[project]
name = "hot_take"
version = "0.1.0"
description = "hot_take using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
hot_take = "hot_take.main:run"
run_crew = "hot_take.main:run"
train = "hot_take.main:train"
replay = "hot_take.main:replay"
test = "hot_take.main:test"
run_with_trigger = "hot_take.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
